--- a/public/main.css
+++ b/public/main.css
@@ -4,8 +4,12 @@ body {
   align-items: center;
   width: 100vw;
   height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 div {
   border: 2px solid green;
+  color: green;
+  padding: 20px;
+  font-size: x-large;
 }
