--- a/public/main.css
+++ b/public/main.css
@@ -78,21 +78,21 @@ button {
 }
 
 .modal-left-enter {
-  left: -500px;
+  left: -1500px;
 }
 
 .modal-left-enter-active {
-  left: 25%;
-  transition: left 500ms;
+  left: 150px;
+  transition: left 800ms ease;
 }
 
 .modal-left-exit {
-  left: 25%;
+  left: 0;
 }
 
 .modal-left-exit-active {
-  left: -550px;
-  transition: left 500ms;
+  left: -1500px;
+  transition: left 800ms;
 }
 
 #canvas-bg {
@@ -153,7 +153,8 @@ button {
   position: absolute;
   z-index: 100;
   pointer-events: none;
-  opacity: 0.5;
+  opacity: 0.7;
   padding: 0;
   margin: 0;
+  transition: opacity 200ms;
 }
