--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -288,7 +288,7 @@ button {
 }
 
 .ff-5 {
-  font-family: 'diel', sans-serif;
+  font-family: 'diel-Regular', sans-serif;
 }
 
 .ff-6 {
@@ -360,7 +360,7 @@ button {
 }
 
 .ff-23 {
-  font-family: 'row', sans-serif;
+  font-family: 'row-Regular', sans-serif;
 }
 
 .ff-24 {
