--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -266,6 +266,20 @@ button {
   width: 100vw;
 }
 
+#intro-modal {
+  position: absolute;
+  background-color: black;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 /* ------------------- */
 /*        Utility      */
 /* ------------------- */
