--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -14,6 +14,10 @@ button {
   padding: 10px;
 }
 
+button:hover {
+  cursor: pointer;
+}
+
 .container {
   display: flex;
   justify-content: space-around;
@@ -283,14 +287,23 @@ button {
   flex-direction: column;
 }
 
-#loading-spinner {
-  margin-top: 25%;
-  background-image: url('../Spinner-1s-200px.gif');
-  width: 200px;
-  height: 200px;
+.intro-video {
+  width: 100vw;
+  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
-#start-button {
+#video1 {
+  z-index: 100;
+}
+
+#video2 {
+  z-index: 50;
+}
+
+#enter-button {
   margin-top: 25%;
   background-color: transparent;
   border: none;
@@ -298,6 +311,37 @@ button {
   padding: 10px;
   color: white;
   text-shadow: 0px 0px 10px green;
+}
+
+#skip-button {
+  position: absolute;
+  right: 15em;
+  bottom: 1em;
+  z-index: 1000;
+  border: none;
+  background-color: transparent;
+}
+
+#skip-button img {
+  width: auto;
+  height: 2em;
+}
+
+#start-button {
+  position: absolute;
+  width: auto;
+  height: 2em;
+  left: 50%;
+  transform: translate(-50%, 0);
+  bottom: 15em;
+  z-index: 1000;
+  border: none;
+  background-color: transparent;
+}
+
+#start-button img {
+  width: auto;
+  height: 6em;
 }
 
 /* ------------------- */
