--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -18,6 +18,10 @@ button:hover {
   cursor: pointer;
 }
 
+iframe {
+  border: none;
+}
+
 .container {
   display: flex;
   justify-content: space-around;
@@ -273,7 +277,7 @@ button:hover {
 #intro-modal {
   position: absolute;
   background-color: black;
-  background-image: url('../FLOPPY_BETA.png');
+  background-image: url('https://floppy-assets.s3.us-east-2.amazonaws.com/FLOPPY_BETA.png');
   background-size: 100% 100%;
   background-repeat: none;
   top: 0;
@@ -287,21 +291,28 @@ button:hover {
   flex-direction: column;
 }
 
-.intro-video {
+.video-wrapper {
+  height: 100vh;
   width: 100vw;
-  height: auto;
   position: absolute;
   top: 0;
   left: 0;
+  overflow: hidden;
 }
 
-#video1 {
+.intro-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* #video1 {
   z-index: 100;
 }
 
 #video2 {
   z-index: 50;
-}
+} */
 
 #enter-button {
   margin-top: 25%;
@@ -324,7 +335,7 @@ button:hover {
 
 #skip-button img {
   width: auto;
-  height: 2em;
+  height: 3em;
 }
 
 #start-button {
@@ -333,7 +344,7 @@ button:hover {
   height: 2em;
   left: 50%;
   transform: translate(-50%, 0);
-  bottom: 15em;
+  bottom: 5em;
   z-index: 1000;
   border: none;
   background-color: transparent;
