--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -302,19 +302,50 @@ ul {
 }
 
 #intro-modal {
-  position: absolute;
-  background-color: black;
-  top: 0;
-  left: 0;
   height: 100vh;
   width: 100vw;
-  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
+#intro-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  max-width: 100%;
+  height: auto;
+  z-index: 1;
+}
+
+#intro-button-wrapper {
+  position: absolute;
+  z-index: 1000;
+  top: 77%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 0.8em;
+  transition: all cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.intro-button:not(:nth-child(2)) {
+  max-height: 2.3em;
+}
+
+.intro-button:nth-child(2) {
+  max-height: 1.8em;
+}
+
+.intro-button:hover {
+  cursor: pointer;
+}
 /* ------------------- */
 /*        Utility      */
 /* ------------------- */
