--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,6 +7,10 @@ body {
   background-color: black;
 }
 
+iframe {
+  border: none;
+}
+
 button {
   background-color: black;
   border: 1px solid green;
@@ -302,37 +306,47 @@ ul {
 }
 
 #intro-modal {
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* flex-direction: column; */
+  background-color: black;
+}
+
+#intro-video,
+#loading-video {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  height: 100vh;
+  max-height: 100vh;
+  max-width: 100%;
 }
 
 #intro-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  max-width: 100%;
-  height: auto;
+  z-index: 5;
+}
+
+#loading-video {
   z-index: 1;
 }
 
 #intro-button-wrapper {
   position: absolute;
   z-index: 1000;
-  top: 77%;
+  top: 75%;
   left: 50%;
   transform: translate(-50%, 0);
-  opacity: 0;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   row-gap: 0.8em;
-  transition: all cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .intro-button:not(:nth-child(2)) {
@@ -344,6 +358,20 @@ ul {
 }
 
 .intro-button:hover {
+  cursor: pointer;
+}
+
+#enter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 40;
+  font-family: 'pix Chicago', sans-serif;
+  font-size: 3em;
+  color: white;
+  text-shadow: 0 0 10px white, 0 0 20px white, 0 0 40px blue, 0 0 60px white,
+    0 0 80px blue;
   cursor: pointer;
 }
 /* ------------------- */
