--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,10 +1,14 @@
+:root {
+  --bg-grey: rgb(213, 211, 211);
+}
+
 body {
   width: 100vw;
   font-family: Arial, Helvetica, sans-serif;
-  color: green;
+  color: black;
   margin: 0;
   padding: 0;
-  background-color: black;
+  background-color: var(--bg-grey);
   overflow: hidden;
 }
 
@@ -13,9 +17,13 @@ iframe {
 }
 
 button {
-  background-color: black;
-  border: 1px solid green;
-  color: green;
+  background-color: var(--bg-grey);
+  border-style: solid;
+  border-width: 3px;
+  border-top-color: rgb(251, 250, 250);
+  border-right-color: gray;
+  border-bottom-color: rgb(109, 108, 108);
+  border-left-color: rgb(226, 225, 225);
   padding: 10px;
 }
 
@@ -28,6 +36,8 @@ ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 #dub-button {
@@ -66,11 +76,16 @@ ul {
 }
 
 .ie-modal {
-  border: 1px solid green;
-  background-color: rgb(118, 118, 118);
+  border-style: solid;
+  border-width: 3px;
+  border-top-color: rgb(251, 250, 250);
+  border-right-color: gray;
+  border-bottom-color: rgb(109, 108, 108);
+  border-left-color: rgb(226, 225, 225);
   flex-direction: column;
-  /* padding: 20px; */
+  background-color: var(--bg-grey);
   width: 100vw;
+  max-width: 100%;
   height: 100vh;
   position: absolute;
   z-index: 20;
@@ -164,17 +179,22 @@ ul {
 
 #selector {
   position: absolute;
-  left: 0px;
-  /* padding: 0 1em; */
+  left: 10px;
   flex-direction: column;
   color: black;
+  row-gap: 1em;
+}
+
+#selector div {
+  padding: 0.1em 0.5em 0.2em 0.5em;
 }
 
 .stamps {
   /* display: flex; */
   height: 300px;
+  padding: 1em;
   flex-direction: row;
-  background-color: green;
+  background-color: var();
   flex-wrap: wrap;
   max-width: 300px;
   z-index: 3;
@@ -222,7 +242,6 @@ ul {
 
 .stamp {
   height: 50px;
-  border: 1px solid green;
 }
 
 .selected {
@@ -242,15 +261,15 @@ ul {
 #size-input {
   appearance: none;
   background: black;
-  outline: 1px solid green;
+  outline: none;
 }
 
 #size-input::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 20px;
-  height: 20px;
-  background: green;
+  width: 21px;
+  height: 21px;
+  background: var(--bg-grey);
 }
 
 #stamp-ol {
@@ -285,8 +304,7 @@ ul {
   max-height: 3em;
   max-width: 8em;
   overflow-y: scroll;
-  background-color: green;
-  border: 1px solid black;
+  background-color: var(--bg-grey);
   color: black;
   list-style: none;
 }
@@ -372,6 +390,155 @@ ul {
     0 0 80px blue;
   cursor: pointer;
 }
+
+/* ------------------- */
+/*       Upload        */
+/* ------------------- */
+
+.upload-wrapper {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 4em;
+  background-color: var(--bg-grey);
+}
+
+.upload-inner-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 2em;
+}
+
+/* ------------------- */
+/*       Crates        */
+/* ------------------- */
+
+#crates {
+  height: 100vh;
+  width: 100vw;
+}
+
+.crates-content-wrapper {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+}
+
+.crates-controls-wrapper,
+.canvas-wrapper {
+  width: 50%;
+}
+
+.crates-controls-wrapper {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(213, 211, 211);
+  box-sizing: border-box;
+}
+
+.crates-border,
+.stamps,
+.color-selector,
+#size-input,
+#size-input::-webkit-slider-thumb,
+.text-color,
+#centerlabel,
+.upload-wrapper,
+#selector div {
+  border-style: solid;
+  border-width: 3px;
+  border-top-color: rgb(251, 250, 250);
+  border-right-color: gray;
+  border-bottom-color: rgb(109, 108, 108);
+  border-left-color: rgb(226, 225, 225);
+}
+
+.crates-border-inner,
+.fonts {
+  border-style: solid;
+  border-width: 3px;
+  border-top-color: rgb(109, 108, 108);
+  border-right-color: rgb(226, 225, 225);
+  border-bottom-color: rgb(251, 250, 250);
+  border-left-color: gray;
+}
+
+.controls-top-wrapper {
+  display: 'flex';
+  flex-direction: column;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 1em 0;
+}
+
+.h1-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.h1-wrapper h1 {
+  color: black;
+  margin: 0;
+  padding: 0.1em 0.5em 0.2em 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.controls-top-inner-wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 1em;
+}
+
+.track-info {
+  font-size: 2em;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  column-gap: 0.5em;
+  background-color: black;
+  color: green;
+  padding: 0.5em;
+}
+
+.button-wrapper button {
+  background-color: rgb(213, 211, 211);
+  color: black;
+  font-family: monospace;
+}
+
+.button-wrapper button:active {
+  background-color: grey;
+  color: white;
+}
+
+.controls-bottom-wrapper {
+  flex-grow: 1;
+  width: 100%;
+  padding: 1em;
+  box-sizing: border-box;
+}
+
+.playlist-wrapper {
+  flex-grow: 1;
+  width: 100%;
+  max-height: 90%;
+  padding: 1em;
+  box-sizing: border-box;
+  background-color: black;
+  color: green;
+  overflow-y: scroll;
+}
+
 /* ------------------- */
 /*        Utility      */
 /* ------------------- */
