--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,8 @@
 :root {
   --bg-grey: rgb(213, 211, 211);
   --bg-grey-80: rgba(213, 211, 211, 0.8);
+  --bg-black: #151515;
+  --blue-glow: #1affff;
 }
 
 body {
@@ -78,24 +80,6 @@ ul {
   left: 0;
 }
 
-.ie-modal {
-  border-style: solid;
-  border-width: 3px;
-  border-top-color: rgb(251, 250, 250);
-  border-right-color: gray;
-  border-bottom-color: rgb(109, 108, 108);
-  border-left-color: rgb(226, 225, 225);
-  flex-direction: column;
-  background-color: var(--bg-grey);
-  width: 100vw;
-  max-width: 100%;
-  height: 100vh;
-  position: absolute;
-  z-index: 20;
-  top: 0;
-  left: 0;
-}
-
 .modal-top-enter {
   top: -400px;
 }
@@ -150,10 +134,34 @@ ul {
   transition: right 800ms;
 }
 
+/* ------------------- */
+/*    Image Editor     */
+/* ------------------- */
+
+.editor-wrapper {
+  /* border-style: solid;
+  border-width: 3px;
+  border-top-color: rgb(251, 250, 250);
+  border-right-color: gray;
+  border-bottom-color: rgb(109, 108, 108);
+  border-left-color: rgb(226, 225, 225); */
+  display: flex;
+  /* background-color: var(--bg-grey); */
+  width: 100vw;
+  max-width: 100%;
+  height: 100vh;
+}
+
+.canvas-wrapper {
+  height: 100vh;
+  position: relative;
+}
+
 .canvas {
   position: absolute;
-  bottom: 20px;
+  /* bottom: 20px; */
   left: calc(50% - 250px);
+  border: 1px solid black;
 }
 
 #canvas-bg {
@@ -181,8 +189,6 @@ ul {
 }
 
 #selector {
-  position: absolute;
-  left: 10px;
   flex-direction: column;
   color: black;
   row-gap: 1em;
@@ -209,25 +215,20 @@ ul {
 
 .controls {
   flex-direction: column;
-  /* position: absolute; */
-  /* height: 300px; */
-  /* right: 50px; */
 }
 
 .controls-wrapper {
-  position: absolute;
-  right: 50px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  height: 80vh;
+  height: 100vh;
   color: black;
 }
 
 .color-selector {
-  position: absolute;
-  top: 40px;
+  /* position: absolute; */
+  /* top: 40px; */
 }
 
 .text-color {
