--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -141,12 +141,6 @@ ul {
 /* ------------------- */
 
 .editor-wrapper {
-  /* border-style: solid;
-  border-width: 3px;
-  border-top-color: rgb(251, 250, 250);
-  border-right-color: gray;
-  border-bottom-color: rgb(109, 108, 108);
-  border-left-color: rgb(226, 225, 225); */
   display: flex;
   /* background-color: var(--bg-grey); */
   width: 100vw;
@@ -154,15 +148,14 @@ ul {
   height: 100vh;
 }
 
-.canvas-wrapper {
+.editor-canvas-wrapper {
   height: 100vh;
+  width: 50vw;
   position: relative;
 }
 
 .canvas {
   position: absolute;
-  /* bottom: 20px; */
-  left: calc(50% - 250px);
   border: 1px solid black;
 }
 
@@ -192,6 +185,10 @@ ul {
 
 #selector {
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-left: 2em;
+  box-sizing: border-box;
   color: black;
   row-gap: 1em;
 }
@@ -200,22 +197,7 @@ ul {
   padding: 0.1em 0.5em 0.2em 0.5em;
 }
 
-.stamps {
-  height: 300px;
-  padding: 1em;
-  flex-direction: row;
-  background-color: var();
-  flex-wrap: wrap;
-  max-width: 300px;
-  z-index: 3;
-  overflow-y: scroll;
-}
-
 #colors {
-  flex-direction: column;
-}
-
-.controls {
   flex-direction: column;
 }
 
@@ -223,13 +205,12 @@ ul {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
+  box-sizing: border-box;
   height: 100vh;
+  width: 50vw;
+  max-width: 50vw;
   color: black;
-}
-
-.controls-inner-wrapper {
-  display: flex;
 }
 
 .color-selector {
@@ -243,9 +224,13 @@ ul {
 }
 
 .permanent {
-  height: 40px;
-  right: 50px;
-  bottom: 20px;
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+  align-items: center;
+  column-gap: 1em;
+  padding-right: 2em;
+  box-sizing: border-box;
 }
 
 .stamp {
