--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -142,7 +142,7 @@ ul {
   width: 100vw;
   max-width: 100%;
   height: 100vh;
-  background-color: var(--bg-black);
+  /* background-color: var(--bg-black); */
   box-sizing: border-box;
 }
 
@@ -156,13 +156,8 @@ ul {
 }
 
 #editor-header {
-  background-image: url('../assets/bg_images/pressadubplateheader.png');
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  font-size: 1.5em;
-  width: 20em;
-  height: 2em;
+  height: 3em;
+  width: auto;
 }
 
 .canvas {
@@ -212,27 +207,15 @@ ul {
 #center-label,
 #stickers,
 #stamps {
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
   height: 3em;
-  width: 10em;
+  width: auto;
 }
 
-#template {
-  background-image: url('../assets/bg_images/Categories/templates_default.png');
-}
-
-#center-label {
-  background-image: url('../assets/bg_images/Categories/centerlabel_clicked.png');
-}
-
-#stickers {
-  background-image: url('../assets/bg_images/Categories/stickers_default.png');
-}
-
-#stamps {
-  background-image: url('../assets/bg_images/Categories/stickers_default.png');
+#template:hover,
+#center-label:hover,
+#stickers:hover,
+#stamps:hover {
+  cursor: pointer;
 }
 
 .control-panel {
@@ -269,6 +252,7 @@ ul {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
+  border: 1px solid black;
 }
 
 .controls-container {
@@ -321,12 +305,10 @@ ul {
   cursor: pointer;
 }
 
+#clear,
 #save {
-  background-image: url('../assets/bg_images/save.png');
-}
-
-#clear {
-  background-image: url('../assets/bg_images/reset.png');
+  height: 3em;
+  width: auto;
 }
 
 .stamp {
@@ -347,7 +329,8 @@ ul {
 #size-input {
   appearance: none;
   background: black;
-  outline: none;
+  border: 1px solid var(--blue-glow);
+  /* outline: none; */
 }
 
 #size-input::-webkit-slider-thumb {
@@ -356,6 +339,13 @@ ul {
   width: 21px;
   height: 21px;
   background: var(--bg-grey);
+  border-style: solid;
+  border-width: 2px;
+  border-top-color: rgb(187, 183, 183);
+  border-right-color: grey;
+  border-bottom-color: grey;
+  border-left-color: rgb(187, 183, 183);
+  border-radius: 2px;
 }
 
 #stamp-ol {
