continues styling image editor

--- a/public/styles/fonts.css
+++ b/public/styles/fonts.css
@@ -436,3 +436,8 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Cytone-Regular';
+  src: url('/Cytone-Regular.otf') format('opentype');
+}
