--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,6 +3,7 @@
   --bg-grey-80: rgba(213, 211, 211, 0.8);
   --bg-black: #151515;
   --blue-glow: #1affff;
+  --blue-glow-80: rgba(26, 255, 255, 0.8);
   --red-text: #ed3714;
   --blue-text: #00a8f1;
 }
@@ -142,7 +143,7 @@ ul {
   width: 100vw;
   max-width: 100%;
   height: 100vh;
-  /* background-color: var(--bg-black); */
+  background-color: var(--bg-black);
   box-sizing: border-box;
 }
 
@@ -207,7 +208,7 @@ ul {
 #center-label,
 #stickers,
 #stamps {
-  height: 3em;
+  height: 3.5em;
   width: auto;
 }
 
@@ -221,17 +222,18 @@ ul {
 .control-panel {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  justify-content: center;
   box-sizing: border-box;
   height: 100vh;
   width: 50vw;
   max-width: 50vw;
   color: black;
+  padding-left: 1em;
 }
 
 .controls-drawer {
   max-width: 100%;
-  height: 50vh;
+  height: 24em;
   display: flex;
   column-gap: 1em;
 }
@@ -244,15 +246,26 @@ ul {
   box-sizing: border-box;
 }
 
-.assets-container {
-  flex-wrap: wrap;
-  padding: 1em;
-  overflow-y: scroll;
+.assets-container-wrapper {
   background-image: url('../assets/bg_images/asset_box.png');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  border: 1px solid black;
+  height: 22em;
+  width: 20em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.assets-container {
+  flex-wrap: wrap;
+  gap: 0.5em;
+  align-items: center;
+  overflow-y: scroll;
+  padding-top: 1em;
+  height: 84%;
+  width: 80%;
 }
 
 .controls-container {
@@ -261,8 +274,11 @@ ul {
   align-items: flex-start;
 }
 
-.colorss {
+.cl_color_selector {
+  width: 15em;
   display: flex;
+  justify-content: space-between;
+  margin-bottom: 1em;
 }
 
 .track-info-input {
@@ -297,7 +313,6 @@ ul {
   background-position: center;
   background-repeat: no-repeat;
   height: 3em;
-  width: 7em;
 }
 
 #save:hover,
@@ -311,8 +326,21 @@ ul {
   width: auto;
 }
 
-.stamp {
+.cl_stamp {
   height: 50px;
+}
+
+.sticker {
+  height: 75px;
+}
+
+.template,
+.stamp_med {
+  height: 100px;
+}
+
+.stamp_invert {
+  filter: invert();
 }
 
 .selected {
@@ -326,19 +354,63 @@ ul {
   justify-content: space-around;
 }
 
-#size-input {
+.color-selector {
+  border: none;
+  background-color: var(--blue-glow-80);
+  border-radius: 5px;
+  box-shadow: 0 0 10px var(--blue-text);
+}
+
+.cl-color {
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  opacity: 0;
+}
+
+.cl-color {
+  cursor: pointer;
+}
+
+#cl-color-wrapper {
+  position: relative;
+}
+
+#cl-color-img {
+  height: 120px;
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  z-index: 100;
+  pointer-events: none;
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.size-label {
+  font-family: 'Cytone-Regular', sans-serif;
+  font-size: 0.8em;
+  color: var(--red-text);
+}
+
+.size-input {
   appearance: none;
   background: black;
-  border: 1px solid var(--blue-glow);
+  border: 2px solid var(--blue-glow-80);
+  box-shadow: 0 0 10px var(--blue-text);
   /* outline: none; */
 }
 
-#size-input::-webkit-slider-thumb {
+.size-input::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
   width: 21px;
   height: 21px;
-  background: var(--bg-grey);
+  background: var(--bg-grey-80);
   border-style: solid;
   border-width: 2px;
   border-top-color: rgb(187, 183, 183);
