--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -30,12 +30,11 @@ iframe {
 button {
   background-color: var(--bg-grey);
   border-style: solid;
-  /* border-width: 3px;
-  border-top-color: rgb(251, 250, 250);
-  border-right-color: gray;
-  border-bottom-color: rgb(109, 108, 108);
-  border-left-color: rgb(226, 225, 225); */
   padding: 10px;
+}
+
+p {
+  margin: 0;
 }
 
 ul {
@@ -660,29 +659,71 @@ ul {
 
 /*      grid view      */
 
+.grid-view-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 1em;
+  background-image: url(../assets/crates_ui_assets/cratesbackgroundTILE.png);
+  background-size: contain;
+  background-repeat: repeat;
+  width: 100vw;
+  max-width: 100%;
+}
+
 .grid-view {
-  background-color: var(--bg-grey);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  width: 100vw;
-  row-gap: 1em;
-  padding: 2em;
+  width: 100%;
+  row-gap: 2em;
   overflow: scroll;
+  margin-top: 3em;
 }
 
 .dubplate-grid-view {
   position: relative;
-  width: 20vw;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 1.5em;
+  color: var(--blue-text);
 }
 
 .dubplate-grid-view img {
-  max-width: 250px;
+  max-width: 200px;
+}
+
+.dubplate-grid-audio-player,
+.dubplate-grid-view-buy {
+  display: flex;
+  align-items: center;
+}
+
+.dubplate-grid-audio-player {
+  margin-top: 0.3em;
+  width: 75%;
+  justify-content: center;
+}
+
+.dubplate-grid-audio-player img:first-child,
+.dubplate-grid-view-buy img {
+  height: 1.6em;
+  width: auto;
+}
+
+.dubplate-grid-audio-player img:nth-child(2) {
+  height: 0.8em;
+  width: auto;
+}
+
+.dubplate-grid-view-buy {
+  width: 60%;
+  font-size: 0.8em;
+  justify-content: flex-end;
+  gap: 0.3em;
 }
 
 .dubplate-grid-view__single-wrapper {
