--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,6 +7,8 @@
   --red-text: #ed3714;
   --blue-text: #00a8f1;
   --Cytone: 'Cytone-Regular', sans-serif;
+  --Malayalam: 'Malayalam', serif;
+  --Malayalam-Bold: 'Malayalam-Bold', serif;
   --glow: 0 0 10px var(--blue-glow), 0 0 5px var(--blue-glow) inset;
 }
 
@@ -852,80 +854,50 @@ img.audio-player-play-button-large {
 #crates {
   height: 100vh;
   width: 100vw;
-  background-color: black;
+  background-image: url('../assets/listener_3d_assets/listener_background.png');
+  background-size: contain;
+  overflow-y: hidden;
+  box-sizing: border-box;
 }
 
 .crates-content-wrapper {
   height: 100%;
-  width: 100vw;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
-.crates-controls-wrapper,
+.crates-playlist-wrapper,
 .canvas-wrapper {
   width: 50%;
-  height: 100%;
-  flex-grow: 1;
+  max-height: 100%;
 }
 
-.crates-controls-wrapper {
+.canvas-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.crates-playlist-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgb(213, 211, 211);
   box-sizing: border-box;
+  border: 1px solid springgreen;
 }
 
-/* .crates-border,
-.color-selector,
-#size-input,
-#size-input::-webkit-slider-thumb,
-.text-color,
-#centerlabel,
-.upload-wrapper,
-.layer-selector div {
-  border-style: solid;
-  border-width: 3px;
-  border-top-color: rgb(251, 250, 250);
-  border-right-color: gray;
-  border-bottom-color: rgb(56, 30, 30);
-  border-left-color: rgb(226, 225, 225);
-  box-sizing: border-box;
-} */
-
-/* .crates-border-inner,
-.fonts {
-  border-style: solid;
-  border-width: 3px;
-  border-top-color: rgb(109, 108, 108);
-  border-right-color: rgb(226, 225, 225);
-  border-bottom-color: rgb(251, 250, 250);
-  border-left-color: gray;
-} */
-
-.controls-top-wrapper {
+.controls-wrapper {
   display: flex;
   flex-direction: column;
   width: 100%;
   box-sizing: border-box;
   padding: 1em 0;
-  background-color: var(--bg-grey);
 }
 
-.h1-wrapper {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.h1-wrapper h1 {
-  color: black;
-  margin: 0;
-  padding: 0.1em 0.5em 0.2em 0.5em;
-  margin-bottom: 0.5em;
-}
-
-.controls-top-inner-wrapper {
+.controls-inner-wrapper {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -940,7 +912,7 @@ img.audio-player-play-button-large {
   display: flex;
   justify-content: center;
   column-gap: 0.5em;
-  background-color: black;
+  /* background-color: black; */
   color: green;
   padding: 0.5em;
 }
@@ -962,7 +934,6 @@ img.audio-player-play-button-large {
   max-height: 70%;
   padding: 1em;
   box-sizing: border-box;
-  background-color: var(--bg-grey);
 }
 
 .playlist-wrapper {
@@ -970,7 +941,6 @@ img.audio-player-play-button-large {
   max-height: 70%;
   padding: 1em;
   box-sizing: border-box;
-  background-color: black;
   color: green;
   overflow-y: scroll;
 }
