--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -661,6 +661,19 @@ ul {
 /*       Crates        */
 /* ------------------- */
 
+.toggle-switch {
+  position: absolute;
+  top: 0.5em;
+  left: 0.5em;
+  z-index: 10000;
+  background-color: transparent;
+  border: 1px solid var(--blue-text);
+  box-shadow: var(--glow);
+  color: var(--blue-text);
+  font-family: var(--Malayalam-Bold);
+  border-radius: 0.5em;
+}
+
 /*      grid view      */
 
 .grid-view-wrapper {
@@ -881,12 +894,21 @@ img.audio-player-play-button-large {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  height: 100vh;
+  z-index: 0;
 }
 
 .crates-playlist-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 100vh;
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   color: var(--green);
   font-family: var(--Malayalam-Bold);
