--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -32,8 +32,9 @@ iframe {
 }
 
 button {
-  background-color: var(--bg-grey);
-  border-style: solid;
+  background-color: var(--bg-black);
+  color: var(--blue-glow);
+  border: 1px solid var(--blue-glow);
   padding: 10px;
 }
 
@@ -62,18 +63,21 @@ ul {
 
 #header {
   position: fixed;
+  box-sizing: border-box;
   width: 100vw;
-  height: 100px;
+  max-width: 100%;
+  height: 4em;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 1em;
   align-items: center;
-  border: 1px solid green;
+  border-bottom: 1px solid var(--blue-glow);
   background-color: black;
   z-index: 3;
 }
 
 .modal {
-  border: 1px solid green;
+  border: 1px solid var(--green);
   background-color: black;
   flex-direction: column;
   padding: 20px;
@@ -139,7 +143,6 @@ ul {
   transition: right 800ms;
 }
 
-
 /* ------------------- */
 /*        Game         */
 /* ------------------- */
@@ -150,13 +153,13 @@ ul {
 }
 
 #ec2-player {
-position: absolute;
-top: 0;
-left: 0;
-height: 100vh;
-width: 100vw;
-z-index: 100000;
-background-color: #00ff12;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100000;
+  background-color: #00ff12;
 }
 
 /* ------------------- */
@@ -583,6 +586,10 @@ background-color: #00ff12;
   z-index: 5;
 }
 
+#loading-message {
+  color: var(--blue-glow);
+}
+
 #loading-video {
   z-index: 1;
   display: none;
@@ -591,10 +598,10 @@ background-color: #00ff12;
 #intro-button-wrapper {
   position: absolute;
   z-index: 1000;
-  top: 75%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, 0);
-  display: none;
+  transform: translate(-50%, -50%);
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
